<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ACTIVITY_ENTRY_NAME</string>

    <!-- account setup -->
    <string name="required_fields">Required Fields</string>
    <string name="required_field">Required Field</string>
    <string name="username_password_required">Please fill in all of the fields before submitting.</string>
    <string name="invalid_email_title">Invalid email</string>
    <string name="invalid_email_message">Your email address is not valid.</string>
    <string name="invalid_password_title">Invalid password</string>
    <string name="invalid_password_message">Password must contain at least 4 characters.</string>
    <string name="passwords_do_not_match_message">Passwords don\'t match.</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="signup_label">Sign Up</string>
    <string name="signin_label">Sign In</string>
    <string name="no_network_title">No network available</string>
    <string name="no_network_message">There is no network available. Please connect to a network and try again.</string>
    <string name="account_setup">Account Setup</string>
    <string name="attempting_configure">Attempting to configure account</string>
    <string name="account_details">Account Details</string>
    <string name="dont_yet_have_an_account">Do not have an account yet?</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="agree_terms_of_service">By signing up, you agree to our <u>Term of Service.</u></string>
    <string name="login_failed_message">Could not login with the provided email address and password.</string>
    
    <!-- errors -->
    <string name="error">Error</string>
    <string name="new_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_task_dialog_title">Add Task</string>
    <string name="task_label_hint">Describe task</string>

</resources>